# Actix_Api

./: .dockerignore  .env.development  .env.example  .gitignore  .vercelignore  Cargo.toml  DockerFile  Procfile  README.md  test-api.sh  vecel.json
api/api/: start.sh
src/: main.rs
src/config/: database.rs
src/controllers/: auth_controller.rs  health_controller.rs  mod.rs  user_controller.rs
src/errors/: api_error.rs
src/middleware/: auth.rs  cors.rs
src/models/: user.rs
src/routes/: auth_routes.rs  config.rs  health_routes.rs  mod.rs  user_routes.rs
src/utils/: hash.rs  jwt.rs
