[package]
name = "Actix_Api"
version = "0.1.0"
edition = "2024"

[dependencies]
# Web framework
actix-web = "4.4"
actix-cors = "0.7"
actix-rt = "2.9"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Environment variables
dotenv = "0.15"

# UUID generation
uuid = { version = "1.0", features = ["v4", "serde"] }

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Futures
futures = "0.3"

[[bin]]
name = "rust-api"
path = "src/main.rs"
