[package]
name = "rust-api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4"
actix-cors = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] } 
chrono = { version = "0.4", features = ["serde"] }
sea-orm = { version = "1.1.17", features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
    "macros",
    "with-chrono",
] }
bcrypt = "0.17.1"
jsonwebtoken = "9.0"
tokio = { version = "1", features = ["full"] }
dotenvy = "0.15"  

[[bin]]
name = "rust-api"
path = "src/main.rs"